--- a/eTools.ini
+++ b/eTools.ini
@@ -1,5 +1,5 @@
 VER	19
-RESOURCEPATH	"C:\Users\juju9\Documents\GitHub\InfinityFlyff-Resource\"
+RESOURCEPATH	"C:\Users\juju9\Documents\InfinityFlyff\Server\Resource\"
 ELEMENTS
 {
 	NONE	0
