--- a/items.ini
+++ b/items.ini
@@ -6,4 +6,6 @@ DEFINES
 	"define.h"
 	"defineItemkind.h"
 	"defineJob.h"
+	"defineAttribute.h"
 }
+ICONSPATH	"C:\Users\juju9\Documents\Client\Item\"
