--- a/MoversEditor/MoversEditor.csproj
+++ b/MoversEditor/MoversEditor.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Scanner">
-      <HintPath>..\..\Scan\Scanner\bin\Debug\Scanner.dll</HintPath>
+    <Reference Include="Scanner, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\Scanner.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -68,6 +69,9 @@
     </Compile>
     <Compile Include="..\Common\Settings.cs">
       <Link>Common\Settings.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Exceptions.cs">
+      <Link>Common\Exceptions.cs</Link>
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
