--- a/MoversEditor/MoversEditor.csproj
+++ b/MoversEditor/MoversEditor.csproj
@@ -21,15 +21,16 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
+    <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>http://25.56.224.192/eTools/MoversEditor/</InstallUrl>
     <ProductName>MoversEditor</ProductName>
     <PublisherName>Maquinours</PublisherName>
     <SuiteName>eTools</SuiteName>
+    <MinimumRequiredVersion>1.0.1.4</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
