--- a/ItemsEditor/ItemsEditor.csproj
+++ b/ItemsEditor/ItemsEditor.csproj
@@ -75,21 +75,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\Common\Project.cs">
-      <Link>Common\Project.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Item.cs">
-      <Link>Common\Item.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Model.cs">
-      <Link>Common\Model.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Settings.cs">
-      <Link>Common\Settings.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Exceptions.cs">
-      <Link>Common\Exceptions.cs</Link>
-    </Compile>
     <Compile Include="SearchForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,5 +121,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <Import Project="..\Common\Common.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
