--- a/MoversEditor/MoversEditor.csproj
+++ b/MoversEditor/MoversEditor.csproj
@@ -100,6 +100,12 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExpertEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExpertEditorForm.Designer.cs">
+      <DependentUpon>ExpertEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FileLoadErrorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExpertEditorForm.resx">
+      <DependentUpon>ExpertEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FileLoadErrorForm.fr.resx">
       <DependentUpon>FileLoadErrorForm.cs</DependentUpon>
