--- a/MoversEditor/MoversEditor.csproj
+++ b/MoversEditor/MoversEditor.csproj
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>http://25.56.224.192/eTools/MoversEditor/</InstallUrl>
+    <InstallUrl>https://maquinours.com/eTools/</InstallUrl>
     <ProductName>MoversEditor</ProductName>
     <PublisherName>Maquinours</PublisherName>
     <SuiteName>eTools</SuiteName>
@@ -31,7 +31,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <ApplicationRevision>6</ApplicationRevision>
-    <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
+    <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
