Ultimate add DDSImageParser library

--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="DDSImageParser">
+      <HintPath>..\libs\net9.0\DDSImageParser.dll</HintPath>
+    </Reference>
     <Reference Include="Scanner">
       <HintPath>..\libs\net9.0\Scanner.dll</HintPath>
     </Reference>
