Changes iteam page & about page
Added DataTemplate on Item Page
Added Developer Team on About page.

--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -28,6 +28,9 @@
     <None Remove="Views\Pages\FolderPathIcon.png" />
     <None Remove="Views\Pages\PaintPaletteIcon.png" />
     <None Remove="Views\Pages\SettingPageBanner.jpg" />
+    <None Remove="Views\Pages\Settings\Kiyo.jpg" />
+    <None Remove="Views\Pages\Settings\Logo.png" />
+    <None Remove="Views\Windows\WarningIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +46,10 @@
     <Resource Include="Views\Pages\FolderPathIcon.png" />
     <Resource Include="Views\Pages\PaintPaletteIcon.png" />
     <Resource Include="Views\Pages\SettingPageBanner.jpg" />
+    <Resource Include="Views\Pages\Settings\Kiyo.jpg" />
+    <Resource Include="Views\Pages\Settings\Maqui.jpg" />
+    <Resource Include="Views\Pages\Settings\Logo.png" />
+    <Resource Include="Views\Windows\WarningIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
