--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -25,6 +25,8 @@
   <ItemGroup>
     <None Remove="Assets\wpfui-icon-256.png" />
     <None Remove="Assets\wpfui-icon-1024.png" />
+    <None Remove="Views\Pages\Settings\AboutIcon.png" />
+    <None Remove="Views\Pages\Settings\PaintPaletteIcon.png" />
     <None Remove="Views\Pages\Settings\SettingPageBanner.png" />
     <None Remove="Views\Windows\SplashScreen.png" />
     <None Remove="Views\Pages\Settings\Kiyo.jpg" />
@@ -44,6 +46,9 @@
   <ItemGroup>
     <Resource Include="Assets\wpfui-icon-256.png" />
     <Resource Include="Assets\wpfui-icon-1024.png" />
+    <Resource Include="Views\Pages\Settings\AboutIcon.png" />
+    <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
+    <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
     <Resource Include="Views\Pages\Settings\SettingPageBanner.png" />
     <Resource Include="Views\Windows\SplashScreen.png" />
     <Resource Include="Views\Pages\Settings\Kiyo.jpg" />
