--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <Content Include="wpfui-icon.ico" />
+    <Resource Include="Views\Pages\Home\discord.png" />
+    <Resource Include="Views\Pages\Home\github.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +30,6 @@
     <None Remove="Assets\wpfui-icon-1024.png" />
     <None Remove="Views\Pages\Collector\Colector404.png" />
     <None Remove="Views\Pages\Collector\Colector404.png.jpg" />
-    <None Remove="Views\Pages\Giftbox\404Page.png" />
     <None Remove="Views\Pages\Home\HomePage.png" />
     <None Remove="Views\Pages\Settings\AboutIcon.png" />
     <None Remove="Views\Pages\Settings\PaintPaletteIcon.png" />
@@ -54,8 +55,19 @@
     <Resource Include="Assets\wpfui-icon-1024.png" />
     <Resource Include="Views\Pages\Collector\Colector404.png" />
     <Resource Include="Views\Pages\Collector\Colector404.png.jpg" />
-    <Resource Include="Views\Pages\Giftbox\404Page.png" />
     <Resource Include="Views\Pages\Home\HomePage.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_1.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_2.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_3.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_4.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_5.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_6.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_7.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_8.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_9.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_10.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_11.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_12.png" />
     <Resource Include="Views\Pages\Settings\AboutIcon.png" />
     <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
     <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
