Motion page first Part

--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -39,6 +39,8 @@
     <None Remove="Views\Pages\Settings\Kiyo.jpg" />
     <None Remove="Views\Pages\Settings\Logo.png" />
     <None Remove="Views\Windows\WarningIcon.png" />
+    <None Remove="Views\Pages\Home\Icons\Icon_13.png" />
+    <None Remove="Views\Pages\Home\Icons\Icon_14.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -66,6 +68,8 @@
     <Resource Include="Views\Pages\Home\Icons\Icon_10.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_11.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_12.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_13.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_14.png" />
     <Resource Include="Views\Pages\Settings\AboutIcon.png" />
     <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
     <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
