--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -41,6 +41,7 @@
     <None Remove="Views\Windows\WarningIcon.png" />
     <None Remove="Views\Pages\Home\Icons\Icon_13.png" />
     <None Remove="Views\Pages\Home\Icons\Icon_14.png" />
+    <None Remove="Views\Pages\Home\Icons\Icon_15.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -70,6 +71,7 @@
     <Resource Include="Views\Pages\Home\Icons\Icon_12.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_13.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_14.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_15.png" />
     <Resource Include="Views\Pages\Settings\AboutIcon.png" />
     <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
     <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
