--- a/eTools Ultimate/eTools Ultimate.csproj
+++ b/eTools Ultimate/eTools Ultimate.csproj
@@ -43,6 +43,7 @@
     <None Remove="Views\Pages\Home\Icons\Icon_13.png" />
     <None Remove="Views\Pages\Home\Icons\Icon_14.png" />
     <None Remove="Views\Pages\Home\Icons\Icon_15.png" />
+    <None Remove="Views\Pages\Home\Icons\Icon_16.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -82,6 +83,7 @@
     <Resource Include="Views\Pages\Home\Icons\Icon_13.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_14.png" />
     <Resource Include="Views\Pages\Home\Icons\Icon_15.png" />
+    <Resource Include="Views\Pages\Home\Icons\Icon_16.png" />
     <Resource Include="Views\Pages\Settings\AboutIcon.png" />
     <Resource Include="Views\Pages\Settings\FolderPathIcon.png" />
     <Resource Include="Views\Pages\Settings\PaintPaletteIcon.png" />
